# c-samples

./: .gitignore
postgres-libqg-sample/: Makefile  readme.md  server_version.c
postgres-spi-exec-test/: .gitignore  Dockerfile  Makefile  docker-compose.yml  execq_simple--0.1.sql  readme.md
postgres-spi-mecab-sample/: Dockerfile  Makefile  docker-compose.yml  mecab_simple--0.1.sql  mecab_simple.c  mecabrc  readme.md
postgres-spi-mecab-sample-rust/: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  execq.c  execq.control  mecab_simple.c  mecab_simple.control  readme.md
postgres-spi-mecab-sample-rust/.devcontainer/: devcontainer.json
postgres-spi-mecab-sample-rust/src/: bindings.rs  lib.rs
postgres-spi-mecab-sample-rust/test/: Cargo.toml  test.control
postgres-spi-mecab-sample-rust/test/src/: lib.rs
postgres-spi-mecab-sample-rust/test2/: Cargo.toml  test2.control
postgres-spi-mecab-sample-rust/test2/src/: lib.rs
postgres-spi-sample/: Dockerfile  Makefile  docker-compose.yml  funcs.c  init.sh  mecab_sample.c  mecab_simple.c  mecab_simple.control  readme.md
postgres-spi-sample/docker/: Dockerfile  docker-compose.yml  reademe.md
postrgres-spi-sample/: readme.md  sample.c
